--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,10 +3,15 @@
 /*Google font integration*/
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-#contact{
+#contact {
     background-color:#f1f1f1;
+    background-image:linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.2)), url("../images/maki.jpg");
     font-family: 'Roboto', sans-serif;
+    
+
 }
+
+
 
 #contact .well{
     margin-top:30px;
@@ -26,9 +31,20 @@
 #contact .row{
     margin-bottom:30px;
 }
+.contact-info p, a{
+    color: #ffffff;
+    line-height: 1.3;
+    font-weight: 700;
+    font-family: "Ubuntu", sans-serif;
+}
+
+.background-display {
+    background-image: url("../images/maki.jpg");
+    }
 
 @media (max-width: 768px) { 
     #contact iframe {
         margin-bottom: 15px;
-    }
+    }}
+
     
