--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,14 @@
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
 
-
+@font-face {
+  font-family: Poppins-Medium;
+  src: url('../fonts/poppins/Poppins-Medium.ttf'); 
+}
+@font-face {
+  font-family: myFirstFont;
+  src: url(sansation_light.woff);
+}
 
 
 
@@ -196,7 +203,7 @@ iframe {
 }
 
 .login100-form-title {
-  font-family: Poppins-Medium;
+  font-family: sans-serif;
   font-size: 30px;
   color: #fff;
   line-height: 1.2;
