--- a/public/css/main.css
+++ b/public/css/main.css
@@ -142,8 +142,8 @@ iframe {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 15px;
-
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
