--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,23 @@
     background-image: url("../images/maki.jpg");
     }
 
+.footer_area_a {
+        position: inherit;
+        bottom: 0;
+        height: 350px;
+        width: 100%;
+        z-index: 1;
+        background-color: #252525;
+        padding: 50px;
+    }
+.custom-alert {
+        border-radius: 25em;
+        padding-left: 25px;
+        margin-top:15px;
+        text-align: center;
+
+}
+
 @media (max-width: 768px) { 
     #contact iframe {
         margin-bottom: 15px;
